	- Table cells that ended with a break would render
	  incorrectly.
	- Fixed the table pre-format sizing code to properly
	  account for borders, padding, etc.
	- Fixed the table squeezing code to honor minimum widths
	  and properly resize the remaining space.
	- The MEDIA SIZE page comment did not reset the printable
	  width and length of the page.


CHANGES IN HTMLDOC v1.8.16

    CHANGES

	- Now break before and after DIV groups to match most
	  browsers (the HTML spec is ambivalent about it...)

    BUG FIXES

	- HR elements didn't render properly.
	- Background images didn't render properly and could
	  lock up HTMLDOC.
	- The "HALF PAGE" comment would lock up HTMLDOC -
	  HTMLDOC would keep adding pages until it ran out of
	  memory.
	- SUP and SUB used a fixed (reduced) size instead of
	  using a smaller size from the current one.
	- Empty cells could cause unnecessary vertical alignment
	  on the same row.


CHANGES IN HTMLDOC v1.8.15

    NEW FEATURES

	- Now support media source, type, and color attributes
	  in PS output.
	- Now support per-page size, margins, headers, footers,
	  orientation, and duplexing.
	- Now support plain text for headers and footers, with $
	  variables to include page numbers and so forth.
	- New device control prolog file for printer-specific
	  option commands.
	- Now support a new continuous web page mode that
	  doesn't automatically insert a page break with each
	  HTML file or URL (--continuous).
	- Now draw border around inline images as needed.
	- Now support MacOS X (only command-line at present).
	- Now support the "page-break-before", "text-align",
	  "vertical-align" style attributes, but only for style
	  information in an element's STYLE attribute.

    CHANGES

	- Now load images into memory only as needed, and unload
	  them when no longer needed.  This provides a dramatic
	  reduction in memory usage with files that contain a
	  lot of in-line images.
	- Now use the long names for the Flate and DCT filters